Update project titles - align left - add full stops
Fix centred paragraph

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -24,12 +24,8 @@ p, li {
     font-weight: bold;
 }
 
-#p-current-position a {
-    color: dodgerblue;
-}
-
 a {
-    color: red;
+    color: dodgerblue;
 }
 
 h3 a {
